log/build_2023-02-16_06-10-52/project_2/stderr.log
  File "/home/jetson/Desktop/workspace_2/install/project_2/lib/python3.8/site-packages/project_2/joy_motor.py", line 25
    if !self.run_script:
       ^
SyntaxError: invalid syntax

